Fixed alignment problem Fixed graph problem Align with Pengchneg suggestion Added highlight for nav bar made the structure more usable

--- a/FIT5120_Project_Refugees/Content/Site.css
+++ b/FIT5120_Project_Refugees/Content/Site.css
@@ -64,10 +64,10 @@ textarea {
         color: white
 }
 
-    .topnavbar a:hover {
-        background-color: black;
-        color: white;
-    }
+.topnavbar a:hover {
+    background-color: #CBA783;
+    color: white;
+}
 
 .languageDropDown{
     float:left;
